# bitirme_projem

./: README.md  ~$010011011_Hafta6.docx
satranc/: README.md  package-lock.json  package.json
satranc/public/: .editorconfig  index.html
satranc/public/models/: model.glb
satranc/public/wasm/: satranc.wasm
satranc/src/: AiGame.js  Api.js  App.js  Chart.js  Game.css  Game.js  Home.css  Home.js  Login.css  Login.js  Logout.js  NotFound.js  PrivateRoute.js  Profile.js  Register.css  Register.js  index.css  index.js  satranc.mjs
satranc/src/proto/: chess_pb.js
satranc/src/store/: store.js  types.js
satranc/src/store/actions/: authAction.js  notationAction.js
satranc/src/store/reducers/: authReducer.js  notationReducer.js
satrancProxyServer/: Dockerfile  envoy.yaml  not.txt
satrancRPC/: chess.proto  chess_grpc_web_pb.js  chess_transcoding.proto
satrancRPC/server/: chess.grpc.pb.h  chess.pb.h
satrancServer/: CMakeLists.txt
satrancServer/proto/: chess.grpc.pb.cc  chess.pb.cc
satrancServer/proto/google/api/: annotations.pb.cc  annotations.pb.h  http.pb.cc
satrancServer/src/: Board.cpp  Board.h  Game.cpp  Game.h  Piece.cpp  Piece.h  Vec2.cpp  server.cpp
satrancWASM/: Board.cpp  Board.h  Game.cpp  Game.h  Vec2.h  main.cpp  main.html  satranc.js  satranc.wasm
